perf(phase-3): implement caching optimization with tenant isolation
## Changes

### Cache Configuration (common-cache module)
- Added CacheNames.COMMITTEE constant for committee caching
- Added TTL configurations for 4 cache types (1 hour each):
  - CacheNames.POSITION
  - CacheNames.GRADE
  - CacheNames.COMMITTEE
  - CacheNames.APPROVAL_TEMPLATE

### Organization Service Caching
- PositionServiceImpl.java:
  - Fixed tenant isolation: updated @Cacheable key from '#id' to tenant+id
  - Added @Cacheable to getByCode() with tenant+code key
  - Added @Cacheable to getAll() with 'all:'+tenant key and unless condition
  - Added @Cacheable to getActive() with 'active:'+tenant key and unless condition
  - Fixed serialization bug: .toList() → .collect(Collectors.toList())
  - Added Collectors import

- GradeServiceImpl.java:
  - Fixed tenant isolation: updated @Cacheable key from '#id' to tenant+id
  - Added @Cacheable to getByCode() with tenant+code key
  - Added @Cacheable to getAll() with 'all:'+tenant key and unless condition
  - Added @Cacheable to getActive() with 'active:'+tenant key and unless condition
  - Fixed serialization bug: .toList() → .collect(Collectors.toList())
  - Added Collectors import

- CommitteeServiceImpl.java:
  - Added CacheNames import
  - Added @Cacheable to getById() with tenant+id key
  - Added @Cacheable to getAll() with 'all:'+tenant key and unless condition
  - Added @Cacheable to getByStatus() with 'status:'+status+tenant key
  - Added @Cacheable to getByType() with 'type:'+type+tenant key
  - Added @CacheEvict to create(), update(), delete(), dissolve()
  - Added @CacheEvict to addMember(), removeMember()
  - Fixed serialization bug: .toList() → .collect(Collectors.toList())
  - Added Collectors import

### Approval Service Caching
- ApprovalTemplateServiceImpl.java:
  - Fixed tenant isolation: updated @Cacheable key to include tenant
  - Added @Cacheable to getAll() with 'all:'+tenant key and unless condition
  - Added @Cacheable to get